@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.012.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.017.
 use strict;
 use warnings;
 
@@ -29,7 +29,7 @@ my %WriteMakefileArgs = (
     "Test::Most" => 0,
     "warnings" => 0
   },
-  "VERSION" => "1.03",
+  "VERSION" => "1.04",
   "test" => {
     "TESTS" => "t/*.t"
   }
